--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -3,6 +3,8 @@
 @import '../scss/mixins';
 @import '../scss/media_quers';
 @import '../scss/base';
+@import '../scss/copyToClipboard';
+@import '../scss/marquee';
 @import '../scss/hero';
 @import '../scss/howisEggsheel';
 @import '../scss/eggshellomics';
