--- a/src/assets/scss/_howisEggsheel.scss
+++ b/src/assets/scss/_howisEggsheel.scss
@@ -49,7 +49,11 @@
             -webkit-text-stroke-width: 9px;
             -webkit-text-stroke-color: $heading;
             font-family: 'Tusker-Grotesk-5700';
-            @include sm{
+            @include lg{
+                text-shadow: 0px 2.567px 0px rgba(0, 0, 0, 0.048);
+                -webkit-text-stroke-width: 4px;
+            }
+            @include mmd{
                 text-shadow: 0px 2.567px 0px rgba(0, 0, 0, 0.048);
                 -webkit-text-stroke-width: 4px;
             }
