--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -157,3 +157,8 @@
         }
     }
 }
+
+.custom-snowfall img {
+    width: 330px; /* Adjust size as needed */
+    height: auto; /* Adjust size as needed */
+  }
