--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -23,22 +23,9 @@
         }
         h1{
             color: $white;
-            -webkit-text-stroke-width: 16px;
-            -webkit-text-stroke-color: #343230;
-            text-transform: uppercase;
             margin-bottom: 15px;
-            @include xxl{
-                -webkit-text-stroke-width: 8px;
-            }
-            @include xl{
-                -webkit-text-stroke-width: 8px;
-            }
-            @include lg{
-                -webkit-text-stroke-width: 8px;
-            }
-            @include mmd{
-                -webkit-text-stroke-width: 8px;
-            }
+            text-transform: uppercase;
+            line-height: 120%;
             @include sm{
                 text-align: center;
                 margin-top: 30px;
