--- a/src/assets/scss/_copyToClipboard.scss
+++ b/src/assets/scss/_copyToClipboard.scss
@@ -7,7 +7,7 @@
         border: 1px solid #050606;
         background: $white;
         box-shadow: 5px 4px 0px 0px #000;
-        padding: 24px;
+        padding: 18px 24px;
         max-width: 739px;
         display: flex;
         align-items: center;
@@ -19,8 +19,9 @@
         input{
             padding:0;
             border:0;
-            color: $primary;
-            @include font-24;
+            color: $black;
+            @include font-28;
+            font-weight: 600;
             width: 100%;
             padding-right: 10px; 
             @include sm{
@@ -29,13 +30,15 @@
             }
         }
         button{
-            padding: 14.933px 14.932px;
+            padding: 10px;
             border-radius: 6.4px;
             border: 2.133px solid #000;
             background: #FFF;
             position: absolute;
             bottom: -14px;
             right: -39px;
+            width: 64px;
+            height: 64px;
             @include sm{
                 padding: 6px;
                 border-radius: 4px;
@@ -43,6 +46,8 @@
                 right: 3px;
                 bottom: auto;
                 transform: translateY(-50%);
+                width: 40px;
+                height: 40px;
             }
             img{
                 max-width: 34px;
