--- a/src/assets/scss/_eggshellomics.scss
+++ b/src/assets/scss/_eggshellomics.scss
@@ -39,9 +39,9 @@
         margin-top: 175px;
         margin-bottom: 220px;
         border-radius: 48px;
-        padding: 40.22px 37px 40.78px 37px;
         border: 4px solid #343230;
-        background: #E1ECF7;
+        background: $white;
+        padding: 65px;
         box-shadow: 8px 8px 0px 0px #343230;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -62,14 +62,19 @@
         }
         .single-item{
             border-radius: 24px;
-            border: 4px solid #343230;
-            background: $primary;
+            border: 4px solid #000;
+            background: #E1ECF7;
             box-shadow: 4px 4px 0px 0px #343230;
-            padding: 40px;
+            padding:50px 10px;
             text-align: center;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            & img{
+                max-width: 140px;
+                margin-bottom: 6px;
+            }
             @include mmd{
                 padding: 40px 20px;
             }
@@ -78,6 +83,7 @@
             }
             h5{
                 margin-bottom: 0;
+                @include font-48;
                 @include xl{
                     font-size: 35px;
                 }
