--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -8,7 +8,7 @@
         .heroImg1{
             max-width: 262px;
             margin-left:auto;
-            margin-right: 55px;
+            margin-right: 5px;
             @include sm{
                 margin-right: auto;
 
@@ -17,6 +17,7 @@
         .heroImg2{
             max-width: 667px;
             margin-bottom: -45px;
+            margin-left: -15%;
             @include sm{
                 padding: 0 30px;
             }
@@ -32,10 +33,15 @@
                 margin-bottom: 20px;
             }
         }
+        h5{
+            @include font-33;
+            margin-bottom: 16px;
+            color: $black;
+        }
         .copytoclipboard-inner{
-            margin-left: 30px;
             .copytoclipboard{
-                width: calc(100% - 34px);
+                width: 100%;
+                max-width:calc(100% - 35px);
                 @include sm{
                     width: 100%;
                 }
@@ -79,66 +85,107 @@
             .value_bar.active{
                 border: 3px solid #397FFE;
             }
-        }
-        .prograss-bar{
-            position: relative;
-            border-radius: 32px;
-            border: 1px solid #343230;
-            background: $white;
-            height: 24px;
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            span{
-                position: relative;
-                border-right: 1px solid $black;
-                z-index: 1;
-            }
-            span:nth-child(4), span:last-child{
-                border:0;
-            }
-            span.active{
-                border-radius: 32px;
-                background: #397FFE;
-                &::before{
-                    position: absolute;
-                    content: "";
-                    right: -20px;
-                    top: 50%;
-                    width: 40px;
-                    height: 40px;
-                    background-image: url('../img/dot.png');
-                    z-index: -1;
-                    transform: translateY(-50%);
-                    border-radius: 50%;
-                    background-size: contain;
-                    background-repeat: no-repeat;
-                    background-position: center center;
+            & button{
+                width: 100%;
+                border-radius: 11.374px;
+                border: 3px solid #EEE;
+                background: $white;
+                @include font-28;
+                color: #484855;
+                font-family: 'Ballo';
+                font-weight: 400;
+                padding: 8px 0px;
+                line-height: 140%;
+                &.active{
+                    border: 3px solid #397FFE;
                 }
-                
             }
-            .price{
-                position: absolute;
-                bottom: -95px;
-                left: 80px;
-                @include font-25;
-                color: $heading;
-                font-weight: 500;
-                z-index: 1;
-                padding: 10px 20px;
-                padding-top: 27px;
-                &::before{
+        }
+        & .prograss{
+            &-bar{
+                position: relative;
+                border-radius: 32px;
+                border: 1px solid #343230;
+                background: $white;
+                height: 24px;
+                display: grid;
+                grid-template-columns: repeat(4, 1fr);
+                span{
+                    position: relative;
+                    border-right: 1px solid $black;
+                    z-index: 1;
+                }
+                span:nth-child(4), span:last-child{
+                    border:0;
+                }
+                span.active{
+                    border-radius: 32px;
+                    background: #397FFE;
+                    &::before{
+                        position: absolute;
+                        content: "";
+                        right: -20px;
+                        top: 50%;
+                        width: 40px;
+                        height: 40px;
+                        background-image: url('../img/dot.png');
+                        z-index: -1;
+                        transform: translateY(-50%);
+                        border-radius: 50%;
+                        background-size: contain;
+                        background-repeat: no-repeat;
+                        background-position: center center;
+                    }
+                    
+                }
+                .price{
                     position: absolute;
+                    bottom: -95px;
+                    right: 0;
+                    @include font-28;
+                    color: $heading;
+                    font-weight: 500;
+                    z-index: 1;
+                    padding: 10px 20px;
+                    padding-top: 25px;
+                    &::before{
+                        position: absolute;
+                        content: "";
+                        top: 0;
+                        left: 0;
+                        width: 100%;
+                        height: 100%;
+                        background-image: url('../img/priceBg.png');
+                        z-index: -1;
+                        background-size: 100% 100%;
+                        background-repeat: no-repeat;
+                        background-position: center center;
+                        z-index: -1;
+                    }
+                }
+            }
+            &-inner{
+                background-color: $primary;
+                width: var(--width);
+                position: absolute;
+                top: 0;
+                height: 100%;
+                left: 0;
+                border-radius: 10px;
+                &::before{
                     content: "";
-                    top: 0;
-                    left: 0;
-                    width: 100%;
-                    height: 100%;
-                    background-image: url('../img/priceBg.png');
-                    z-index: -1;
-                    background-size: 100% 100%;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    z-index: -1;
+                    --width:40px;
+                    width: var(--width);
+                    height: var(--width);
+                    border-radius: 100%;
+                    border: 2px solid $black;
+                    position: absolute;
+                    top: 50%;
+                    right: 0;
+                    background-color: $white;
+                    transform: translateY(-50%);
+                    filter: drop-shadow(2px 2px 0px #000);
+
                 }
             }
         }
