--- a/src/assets/scss/_mixins.scss
+++ b/src/assets/scss/_mixins.scss
@@ -2,32 +2,6 @@
     transition: all .3s ease-in-out;
 }
 
-@mixin hidden {
-    opacity: 0;
-    visibility: hidden;
-}
-
-@mixin show {
-    opacity: 1;
-    visibility: visible;
-}
-
-@mixin img($property) {
-    width: 100%;
-    height: 100%;
-    object-fit: $property;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-@mixin postion_middle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 @mixin middle_clear {
     position: unset;
     top: 0%;
@@ -35,20 +9,8 @@
     transform: translate(0, 0);
 }
 
-@mixin potion_left {
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
-@mixin potion_right {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
-@mixin font-231{
-    font-size: 231px;
+@mixin font-250{
+    font-size: 250px;
     line-height: 120%;
     @include xxl {
         font-size: 180px;
@@ -70,8 +32,8 @@
     }
 }
 
-@mixin font-160 {
-    font-size: 160px;
+@mixin font-175 {
+    font-size: 175px;
     line-height: 120%;
     @include xl {
         font-size: 140px;
@@ -106,8 +68,8 @@
 }
 
 
-@mixin font-140 {
-    font-size: 140px;
+@mixin font-120 {
+    font-size: 120px;
     line-height: 120%;
     @include xl {
         font-size: 100px;
@@ -123,8 +85,8 @@
     }
 }
 
-@mixin font-52 {
-    font-size: 52px;
+@mixin font-53 {
+    font-size: 53px;
     line-height: 145%;
     @include xl {
         font-size: 45px;
@@ -173,8 +135,31 @@
     }
 }
 
+@mixin font-33 {
+    font-size: 33px;
+    line-height: 120%;
+    @include md {
+        font-size: 28px;
+    }
+    @include sm {
+        font-size: 25px;
+    }
+}
+
+
 @mixin font-32 {
     font-size: 32px;
+    line-height: 120%;
+    @include md {
+        font-size: 28px;
+    }
+    @include sm {
+        font-size: 25px;
+    }
+}
+
+@mixin font-30 {
+    font-size: 30px;
     line-height: 120%;
     @include md {
         font-size: 28px;
@@ -221,9 +206,4 @@
     @include sm {
         font-size: 18px;
     }
-}
-
-@mixin flex {
-    display: flex;
-    align-items: center;
 }
