--- a/src/assets/scss/_eggshellomics.scss
+++ b/src/assets/scss/_eggshellomics.scss
@@ -1,11 +1,11 @@
 .eggshellomics{
     &-area{
-        padding-top: 160px;
+        padding-top: 125px;
         padding-bottom: 0px;
         background-color: $_bg2;
         position: relative;
         @include mmd{
-            padding-top: 120px;
+            padding-top: 80px;
         }
         @include sm{
             padding-top: 80px;
@@ -13,11 +13,10 @@
         & .egshmics {
             position: absolute;
             width: 40%;
-            top: 56%;
+            bottom: 0;
             left: 0;
-            transform: translateY(-50%);
             img{
-                max-width: 700px;
+                max-width: 630px;
             }
         }
         .marquee{
@@ -36,8 +35,8 @@
         }
     }
     &-service{
-        margin-top: 175px;
-        margin-bottom: 220px;
+        margin-top: 65px;
+        margin-bottom: 300px;
         border-radius: 48px;
         border: 4px solid #343230;
         background: $white;
