--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -35,6 +35,7 @@ h1{
     -webkit-text-stroke-color: #16161B;
     @include sm{
         -webkit-text-stroke-width: 5px;
+        text-shadow: -6px 7px 0px #4C7EF6;
     }
 }
 
@@ -45,6 +46,7 @@ h2{
     -webkit-text-stroke-color: #16161B;
     @include sm{
         -webkit-text-stroke-width: 1px;
+        text-shadow: -5px 5px 0px #4C7EF6;
     }
 }
 
@@ -55,6 +57,7 @@ h3{
     -webkit-text-stroke-color: #16161B;
     @include sm{
         -webkit-text-stroke-width: 1px;
+        text-shadow: -5px 5px 0px #4C7EF6;
     }
 }
 
@@ -65,6 +68,7 @@ h4{
     -webkit-text-stroke-color: #16161B;
     @include sm{
         -webkit-text-stroke-width: 5px;
+        text-shadow: -5px 5px 0px #4C7EF6;
     }
 }
 
