--- a/src/assets/scss/_eggshellomics.scss
+++ b/src/assets/scss/_eggshellomics.scss
@@ -46,8 +46,9 @@
         grid-template-columns: repeat(2, 1fr);
         gap: 15px;
         @include mmd{
-            margin-top: 100px;
-            margin-bottom: 100px;
+            margin-top: 50px;
+            margin-bottom: 80px;
+            padding: 30px;
         }
         @include sm{
             margin-top: 50px;
@@ -73,12 +74,16 @@
             & img{
                 max-width: 140px;
                 margin-bottom: 6px;
+                @include sm{
+                    max-width: 70px;
+                }
             }
             @include mmd{
                 padding: 40px 20px;
             }
             @include sm{
                 border-radius: 15px;
+                padding: 30px 10px;
             }
             h5{
                 margin-bottom: 0;
