--- a/src/assets/scss/_howisEggsheel.scss
+++ b/src/assets/scss/_howisEggsheel.scss
@@ -2,7 +2,7 @@
     &-area{
         padding-top: 200px;
         padding-bottom: 150px;
-        background-color: $_bg1;
+        background-color: $white;
         @include sm{
             padding-top: 120px;
             padding-bottom: 90px;
