--- a/src/assets/scss/_eggshellomics.scss
+++ b/src/assets/scss/_eggshellomics.scss
@@ -27,10 +27,14 @@
         }
         .section-title{
             h2{
-               @include sm{
-                font-size: 50px;
-                margin-bottom: 0;
-               }
+                @include sm{
+                 font-size: 50px;
+                 margin-bottom: 0;
+                }
+                @include ssm{
+                 font-size: 45px;
+                 margin-bottom: 0;
+                }
             }
         }
     }
@@ -51,14 +55,14 @@
             padding: 30px;
         }
         @include sm{
-            margin-top: 50px;
-            margin-bottom: 100px;
-            padding: 30px;
+            margin-top: 30px;
+            margin-bottom: 75px;
+            padding: 20px;
             border-radius: 20px;
         }
         @include ssm{
             grid-template-columns: 1fr;
-            padding: 30px;
+            padding: 15px;
         }
         .single-item{
             border-radius: 24px;
