--- a/src/assets/scss/_eggshellomics.scss
+++ b/src/assets/scss/_eggshellomics.scss
@@ -91,6 +91,7 @@
             }
             h5{
                 margin-bottom: 0;
+                text-transform: uppercase;
                 @include font-48;
                 @include xl{
                     font-size: 35px;
