--- a/src/assets/scss/_marquee.scss
+++ b/src/assets/scss/_marquee.scss
@@ -1,23 +1,23 @@
-.marquee{
+.marquee {
     border: 4px solid #343230;
     background: $primary;
-    transform: translateY(35px) rotate(2.057deg);
-    padding: 17.143px 0px 16.857px 0px;
+    // transform: translateY(35px) rotate(2.057deg);
+    padding: 27px 0;
     width: 106%;
-    margin-left: -3%;
+    // margin-left: -3%;
     position: relative;
     z-index: 99;
-    .rfm-initial-child-container{
+    .rfm-initial-child-container {
         gap: 32px;
-        .rfm-child{
-            figure{
+        .rfm-child {
+            figure {
                 rotate: -2deg;
-                img{
+                img {
                     max-width: 176px;
                 }
             }
         }
-        .rfm-marquee-container{
+        .rfm-marquee-container {
             height: 65px;
         }
     }
